@@ -2,6 +2,7 @@ This is the C SDK for EdgeX device services.
 
 Changes for 2.3.0 "Levski":
 
+- Implement device commands via redis MessageQueue
 - Implement MaxEventSize configuration
 
 Changes for 2.2.0 "Kamakura":
